--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'University of Oxford'
 - !lcc 'LF'
+- GITenberg
 title: 'Oxford and Her Colleges: A View from the Radcliffe Library'
 url: http://www.gutenberg.org/ebooks/37893
